# memory-tracker

./: .gitignore  .gitlab-ci.yml  README.md
app/: entrypoint.sh  main.py  pyproject.toml
app/apps/logger/: api.py  services.py
app/apps/logger/tests/: test_api.py
app/memory_tracker/: constants.py  databases.py
app/memory_tracker/configs/: __init__.py  base.py  development.py  production.py
app/memory_tracker/cron/: cronjobs  run_tasks.sh  tasks.py
docker/: build_script.sh  deploy_script.sh  docker-compose-deploy.yml  docker-compose-dev.yml
docker/Dockerfile/: .env  docker-compose.yml  fastapi.Dockerfile  nginx.Dockerfile
docker/Dockerfile/nginx/: project.conf
