[tool.poetry]
version = "0.1.0"
name = "Memory Tracker"
description = ""
authors = ["Hadi Do <dodangeh.hadi@gmail.com>"]
maintainers = ["Hadi Do <dodangeh.hadi@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "~3.10"
psutil = "~5.9.8"
fastapi = "~0.110.0"
uvicorn = "^0.27"
gunicorn = "^21.2"
httpx = "^0.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
